--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <nav>
     <h1>MERCEARIA JONAS</h1>
     <ul>
-        <li><a href="pagina2.html">contato</a></li>
+        <li><a href="pagina2.html">Opções</a></li>
         <li><a href="#">agenda</a></li>
         <li><a href="#">programa</a></li>
         <li><a href="#">sobre nos</a></li>
