--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>MERCEARIA JONAS</h1>
     <ul>
         <li><a href="pagina2.html">Opções</a></li>
-        <li><a href="#">agenda</a></li>
+        <li><a href="pagina3.html">Localização</a></li>
         <li><a href="#">programa</a></li>
         <li><a href="#">sobre nos</a></li>
         <li><a href="#">mais</a></li>
