--- a/pagina2.html
+++ b/pagina2.html
@@ -10,19 +10,16 @@
     <nav>
         <h1>MERCEARIA JONAS</h1>
         <ul>
-            <li><a href="pagina2.html">Contato</a></li>
-            <li><a href="#">Agenda</a></li>
-            <li><a href="#">Programa</a></li>
-            <li><a href="#">Sobre Nós</a></li>
-            <li><a href="#">Mais</a></li>
+            <li><a href="index.html">Inicio</a></li>
+        
         </ul>
     </nav>
 
     <main>
         <div class="carrossel">
-            <img src="imagem1.jpg" class="slide">
-            <img src="imagem2.jpg" class="slide">
-            <img src="imagem3.jpg" class="slide">
+            <img src="pexels-photo-32130791.jpeg" class="slide">
+            <img src="pexels-photo-32130698.jpeg" class="slide">
+            <img src="pexels-photo-264636.jpeg" class="slide">
         </div>
     </main>
 
